fixed theme settings + logo contrast

--- a/themes/one/less/theme.less
+++ b/themes/one/less/theme.less
@@ -41,6 +41,9 @@ html { overflow-y: scroll; }
 .tm-navbar-transparent .uk-navbar { background: none; }
 
 // Contrast color
+
+.tm-logo-contrast { display: none; }
+
 .tm-navbar-contrast {
 
     .uk-navbar { color: @contrast-color; }
@@ -71,6 +74,10 @@ html { overflow-y: scroll; }
 
     .uk-navbar-toggle:hover,
     .uk-navbar-toggle:focus { color: @contrast-color; }
+
+    // Logo
+    .tm-logo { display: none; }
+    .tm-logo-contrast { display: inline-block; }
 
 }
 
